--- a/src/quizCreate/quizCreate.css
+++ b/src/quizCreate/quizCreate.css
@@ -116,7 +116,7 @@
     flex-direction: column;
 }
 
-input[type="checkbox"] {
+#private {
     display: none;
 }
 
@@ -124,7 +124,7 @@ label {
     cursor: pointer;
 }
 
-input[type="checkbox"]+label:before {
+#private+label:before {
     border: 1px solid #333;
     content: "\00a0";
     display: inline-block;
@@ -138,7 +138,7 @@ input[type="checkbox"]+label:before {
     background: #FFD166;
 }
 
-input[type="checkbox"]:checked+label:before {
+#private:checked+label:before {
     color: #333;
     content: "\2714";
     text-align: center;
