--- a/src/quizDisplay/quizDisplay.css
+++ b/src/quizDisplay/quizDisplay.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 10%;
+    padding-bottom: 10px;
 }
 
 #title {
@@ -17,4 +19,22 @@
     border: 1px solid grey;
     width: fit-content;
     margin: 20px;
+}
+
+.quizNav {
+    margin: 10px;
+    padding: 20px 45px 20px 15px;
+    border: 1px solid black;
+    color: black;
+    /* font-size: 2em; */
+    font-size: 1em;
+    text-decoration: none;
+    font-family: 'Avenir';
+    font-weight: 500;
+}
+
+@media only screen and (min-width:1000px) {
+    .quizBox {
+        margin: 0 20%;
+    }
 }
