--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -2,37 +2,26 @@
     font-family: 'Goldana';
     font-style: normal;
     font-weight: 400;
-    /* src: url('../fonts/open-sans-v13-latin-regular.eot'); */
-    /* IE9 Compat Modes */
     src: local('Goldana'), url('./Goldana Outline Extrude.ttf') format('truetype'), url('./Goldana Base.woff') format('woff'), url('./Goldana Outline Extrude.otf') format('opentype');
-    /* local('OpenSans'),  */
-    /* url('../fonts/open-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), IE6-IE8 */
-    /* url('../fonts/open-sans-v13-latin-regular.woff2') format('woff2'), Super Modern Browsers */
-    /* url('../fonts/open-sans-v13-latin-regular.woff') format('woff'), Modern Browsers */
-    /* url('../fonts/open-sans-v13-latin-regular.ttf') format('truetype'), Safari, Android, iOS */
-    /* url('../fonts/open-sans-v13-latin-regular.svg#OpenSans') format('svg'); */
-    /* Legacy iOS */
 }
 
 @font-face {
     font-family: 'Avenir';
     font-style: normal;
     font-weight: 400;
-    src: local('Avenir'), url('./Avenir-Light.ttf') format('truetype'), url('./Avenir-Light.woff') format('woff');
+    src: local('Avenir'), url('./Avenir-Roman.ttf') format('truetype'), url('./Avenir-Roman.woff') format('woff');
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 .landingTitle {
-    /* font-size: 15em; */
     font-size: 10em;
     font-family: 'Goldana';
     font-weight: normal;
     color: #F35C5C;
     -webkit-text-stroke: 1px black;
-    /* margin-left: 1%; */
     text-align: left;
     margin-block-start: .02em;
-    /* text-align: center; */
+    margin-block-end: .4em;
 }
 
 .buttonWrap {
@@ -42,16 +31,14 @@
 }
 
 #homepage {
-    padding: 8%;
+    padding: 50px;
 }
 
 .homeNav {
-    /* margin: 20px; */
     margin: 10px;
     padding: 20px 45px 20px 15px;
     border: 1px solid black;
     color: black;
-    /* font-size: 2em; */
     font-size: .94em;
     text-decoration: none;
     font-family: 'Avenir';
@@ -71,6 +58,7 @@
 .yellowButton {
     box-shadow: 6px 6px#F35C5C;
     background-color: #FFD166;
+    font-family: 'Avenir';
 }
 
 .foot {
@@ -90,7 +78,6 @@
 
 @media only screen and (min-width:420px) {
     .landingTitle {
-        /* text-align: center; */
         font-size: 12em;
     }
     .homeNav {
@@ -101,7 +88,6 @@
 @media only screen and (min-width:520px) {
     .landingTitle {
         text-align: center;
-        /* font-size: 12em; */
     }
 }
 
