--- a/src/quizCreate/quizCreate.css
+++ b/src/quizCreate/quizCreate.css
@@ -14,22 +14,13 @@
     margin: 0 2%;
     height: 100%;
     text-align: left;
+    font-size: 1em;
 }
 
 #categories {
     border: 2px solid #06D6A0;
     border-radius: 7px;
     max-width: fit-content;
-}
-
-#quizSub {
-    /* font-size: 1.5em; */
-    font-size: 1.2em;
-}
-
-#addQuest, #remQuest {
-    /* font-size: 1.2em; */
-    font-size: 1em;
 }
 
 #description {
@@ -55,6 +46,7 @@
 .yellowButtonTwo {
     box-shadow: 6px 6px#F35C5C;
     background-color: #FFD166;
+    font-family: 'Avenir';
 }
 
 .redButton {
@@ -70,6 +62,10 @@
 .questionFormButtons {
     height: 60px;
     display: flex;
+}
+
+.questionFormButtons>* {
+    font-family: 'Avenir';
 }
 
 .pageWrap {
