--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -34,6 +34,12 @@
     padding: 20px;
 }
 
+.user-options {
+    right: 2%;
+    position: absolute;
+    font-size: 18px;
+}
+
 .homeNav {
     margin: 10px;
     padding: 20px 45px 20px 15px;
