--- a/src/existingQuizzes/existing-quizzes.css
+++ b/src/existingQuizzes/existing-quizzes.css
@@ -30,6 +30,17 @@
     margin: 5px;
 }
 
+.loading {
+    font-size: 30vw;
+    font-family: 'Goldana';
+    font-weight: normal;
+    color: #F35C5C;
+    -webkit-text-stroke: 1px black;
+    text-align: left;
+    margin-block-start: .02em;
+    margin-block-end: .4em;
+}
+
 @media only screen and (min-width:600px) {
     #existCorner {
         font-size: 7em;
